--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,13 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "illuminate/html": "^5.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.6",
+        "uxweb/sweet-alert": "^2.0",
+        "nesbot/carbon": "^2.14.2"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
