--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:aTjD9ec9U0xeSjASz+/A3GXfDK+0UEhYW/bRIq8YyaU=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=
 
 LOG_CHANNEL=stack
 
